--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Welcome to Jamliterate!</h1>
-    <p>Simplified Studying</p>
+    <h2>Simplified Studying</h2>
+    <img src="logo.jpg" alt="Logo.jpg" width="500" height="500">
   </body>
 </html>
