--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Jamliterate</title>
+    <link rel="logo" href="logo.jpg" type="image/jpeg">
   </head>
   <body>
     <h1>Welcome to Jamliterate!</h1>
