--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>Jamliterate</title>
-    <link rel="icon" href="logo.jpg" type="image/jpeg">
+    <link rel="icon" href="icon.png" type="image/png">
   </head>
   <body>
     <h1>Welcome to Jamliterate!</h1>
     <h2>Simplified Studying</h2>
-    <img src="logo.jpg" alt="Logo.jpg" width="500" height="500">
+    <img src="icon.png" alt="Icon.png" width="500" height="500">
   </body>
 </html>
