--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
   <head>
     <title>Jamliterate</title>
     <link rel="icon" href="icon.png" type="image/png">
   </head>
   <body>
     <h1>Welcome to Jamliterate!</h1>
+    <hr>
     <h2>Simplified Studying</h2>
+    <hr>
     <img src="icon.png" alt="Icon.png" width="500" height="500">
   </body>
 </html>
