--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <title>Jamliterate</title>
     <link rel="icon" href="icon.png" type="image/png">
   </head>
-  <body>
-    <h1>Welcome to Jamliterate!</h1>
-    <hr>
-    <h2>Simplified Studying</h2>
-    <hr>
+  <body style="background-color:burlywood;">
+    <h1 style="background-color:darkblue;">Welcome to Jamliterate!</h1>
+    <p style="background-color:darkblue;">Simplified Studying</p>
     <img src="icon.png" alt="Icon.png" width="500" height="500">
   </body>
 </html>
