--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="icon.png" type="image/png">
   </head>
   <body style="background-color:burlywood;">
-    <h1 style="color:darkblue;">Welcome to Jamliterate!</h1>
-    <p style="color:darkblue;">Simplified Studying</p>
+    <h1 style="color:darkblue; text-align:center;">Welcome to Jamliterate!</h1>
+    <p style="color:darkblue; text-align:center;">Simplified Studying</p>
     <img src="icon.png" alt="Icon.png" width="500" height="500">
   </body>
 </html>
