--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Jamliterate</title>
     <link rel="icon" href="icon.png" type="image/png">
   </head>
-  <body style="background-color:burlywood;">
+  <body style="background-color:blanchedalmond;">
     <h1 style="color:darkblue; text-align:center;">Welcome to Jamliterate!</h1>
     <p style="color:darkblue; text-align:center;">Simplified Studying</p>
     <img src="icon.png" alt="Icon.png" width="500" height="500">
