--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>Jamliterate</title>
     <link rel="icon" href="icon.png" type="image/png">
+    <link rel="stylessheet" href="styles.css">
   </head>
-  <body style="background-color:blanchedalmond;">
-    <h1 style="color:darkblue; text-align:center;">Welcome to Jamliterate!</h1>
-    <p style="color:darkblue; text-align:center;">Simplified Studying</p>
+  <body>
+    <h1>Welcome to Jamliterate!</h1>
+    <p>Simplified Studying</p>
     <img src="icon.png" alt="Icon.png" width="500" height="500">
   </body>
 </html>
