--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <meta charset="UTF-8">
     <title>Jamliterate</title>
     <link rel="icon" href="icon.png" type="image/png">
-    <link rel="stylessheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Welcome to Jamliterate!</h1>
