--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to Jamliterate!</h1>
     <p>Simplified Studying</p>
     <img src="icon.png" alt="Icon.png" width="500" height="500">
-    <p><a href="mailto:craftsa@bc.edu"> Contact Us</p>
+    <p><a href="mailto:craftsa@bc.edu">Contact Us</a></p>
   </body>
 </html>
 
