--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <p style="text_align:left;"> Rapid Review: For our procrastinators and crammers, we plan to 
       implement a tool that condenses a large flashcard set into a smaller set that groups together
       the main ideas for last-minute studying.</p>    
-    <p><a href="mailto:craftsa@bc.edu">Contact Us</a></p>
+    <h5>Quesions? <a href="mailto:craftsa@bc.edu">Contact us!</a></h5>
   </body>
 </html>
 
