--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
     <h1>Welcome to Jamliterate!</h1>
     <p>Simplified Studying</p>
     <img src="icon.png" alt="Icon.png" width="500" height="500">
+    <hr>
     <h3>Upcoming Features</h3>
-    <p style="text-align: left;">Userbase System: On Jamliterate, 
+    <p style="text-align: left;"><strong>Userbase System</strong>: On Jamliterate, 
       you will be able to create an account and save your data 
       for a more personalized learning experience each time you log in.</p>
-    <p style="text-align: left;">Flash Draw: Our mobile application will
+    <p style="text-align: left;"><strong>Flash Draw</strong>: Our mobile application will
       allow you to take stylus-written notes on the fly, so you don't have
       to turn your class notes into flashcards later.</p>
-    <p style="text-align: left;">Intelligent Study Buddy: This AI-powered study
+    <p style="text-align: left;"><strong>Intelligent Study Buddy</strong>: This AI-powered study
       tool will help you prepare for common standardized tests, providing specific
       types of questions based on your strengths and weaknesses.</p>
-    <p style="text-align: left;">Card Composer: To waste no time creating review materials,
+    <p style="text-align: left;"><strong>Card Composer</strong>: To waste no time creating review materials,
       users will be able to feed our AI Card Composer text for it to automatically
       build a comprehensive flashcard set.</p>
-    <p style="text-align: left;">Rapid Review: For our procrastinators and crammers, we plan to 
+    <p style="text-align: left;"><strong>Rapid Review</strong>: For our procrastinators and crammers, we plan to 
       implement a tool that condenses a large flashcard set into a smaller set that groups together
-      the main ideas for last-minute studying.</p>    
+      the main ideas for last-minute studying.</p>  
+    <hr>
     <h5>Questions? <a href="mailto:craftsa@bc.edu">Contact us!</a></h5>
   </body>
 </html>
